--- a/package.json
+++ b/package.json
@@ -7,16 +7,20 @@
         "start": "node backend/server.js",
         "server": "nodemon backend/server.js",
         "client": "cd frontend && npm run dev",
-        "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+        "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
+        "data:import": "node backend/seeder",
+        "data:destroy": "node backend/seeder -d"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "description": "",
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "concurrently": "^8.2.2",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "mongoose": "^8.5.1",
         "nodemon": "^3.1.4"
     }
 }
