--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "dependencies": {
         "bcryptjs": "^2.4.3",
         "concurrently": "^8.2.2",
+        "cookie-parser": "^1.4.6",
         "dotenv": "^16.4.5",
         "express": "^4.19.2",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.5.1",
         "nodemon": "^3.1.4"
     }
